Fix z-index

--- a/app/assets/stylesheets/cheese_review_form.scss
+++ b/app/assets/stylesheets/cheese_review_form.scss
@@ -52,6 +52,11 @@
 
 .star-rating {
   position: relative;
+  z-index: 1;
+}
+
+span {
+  z-index: 0;
 }
 
 
