--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -60,6 +60,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  z-index: 3;
 
   .logout-button {
     text-transform: uppercase;
