--- a/app/assets/stylesheets/show_cheese.scss
+++ b/app/assets/stylesheets/show_cheese.scss
@@ -91,7 +91,6 @@
     align-self: center;
     top: 4px;
     left: 10px;
-    z-index: -1;
   }
 }
 
